tests/res/has/error_value_bare_type.say
type Shape { pub a; init() { this.a = 1; } }
say d = { nested: { a: 10 } };
d has { nested: Shape }; // error: `has` does not bind; `Shape` would bind it. Write `is Shape` or `has Shape` to test the type
